Adicionado configuração do Swagger

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+app.name=assistant-tremulous-api
+app.version=1.0
+app.description=Consulta de servidores do jogo tremulous para skills da alexa
+app.organization=Danilo Dev
